--- a/src/index.css
+++ b/src/index.css
@@ -43,12 +43,8 @@
 }
 
 @layer utilities {
-  .glassmorphism {
-    @apply bg-white dark:bg-gray-800 border border-gray-300 dark:border-gray-700;
-  }
-
   .glassmorphism-strong {
-    @apply bg-white dark:bg-gray-800 border border-gray-300 dark:border-gray-700;
+    @apply bg-gray-100 dark:bg-gray-800 border border-gray-400 dark:border-gray-600;
   }
 
   .card-hover {
